added missing comments

--- a/desktop-app/index.html
+++ b/desktop-app/index.html
@@ -29,7 +29,7 @@
     </style>
 </head>
 <body class="overflow-y-hidden">
-
+    <!--login view-->
     <div class="container-fluid d-flex flex-row position-relative justify-content-center align-items-center overflow-y-hidden">
         <div class="background-image d-flex flex-row-reverse rounded mt-5 p-2">
             <div class="color-overlay d-flex flex-column justify-content-center align-items-center mt-xxl-5 me-xl-5" style="max-width: 400px">
