fixes and newly added image

--- a/desktop-app/html/index.html
+++ b/desktop-app/html/index.html
@@ -9,7 +9,7 @@
     <title>Login</title>
     <style>
         .background-image {
-            background-image: url('https://img.freepik.com/free-vector/gradient-green-color-background-modern-abstract-designs_343694-2369.jpg?w=360');
+            background-image: url('../assets/login-cover.png');
             background-repeat: no-repeat;
             background-size: cover;
             height: 100vh;
@@ -37,8 +37,8 @@
                     <h2 class="fw-semibold mb-n5 mt-1">Login</h2>
                     <form class="d-flex flex-column justify-content-center align-items-center w-100" >
                         <div class="mb-3 w-100">
-                            <label for="exampleInputEmail1" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="example@gmail.com">
+                            <label for="exampleInputEmail1" class="form-label">Username</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
                         </div>
                         <div class="mb-3 w-100">
                             <label for="exampleInputPassword1" class="form-label">Password</label>
