--- a/desktop-app/html/index.html
+++ b/desktop-app/html/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Login</title>
+    <script src="../scripts/userHandling.js"></script>
     <style>
         .background-image {
             background-image: url('../assets/login-cover.png');
@@ -38,17 +39,17 @@
                     <form class="d-flex flex-column justify-content-center align-items-center w-100" >
                         <div class="mb-3 w-100">
                             <label for="exampleInputEmail1" class="form-label">Username</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
+                            <input type="text" class="form-control" id="userNameInput" aria-describedby="emailHelp" placeholder="">
                         </div>
                         <div class="mb-3 w-100">
                             <label for="exampleInputPassword1" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="">
+                            <input type="password" class="form-control" id="passwordInput" placeholder="">
                         </div>
                         <div class="mb-3 form-check">
                             <input type="checkbox" class="form-check-input" id="exampleCheck1">
                             <label class="form-check-label" for="exampleCheck1">Remember me</label>
                         </div>
-                        <button type="submit" class="btn btn-primary btn-block w-100">Log in</button>
+                        <button type="submit" class="btn btn-primary btn-block w-100" onclick="login()">Log in</button>
                     </form>
                 </div>
             </div>
