Folder structure changed

--- a/desktop-app/html/loading.html
+++ b/desktop-app/html/loading.html
@@ -6,6 +6,6 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
     </head>
     <body style="background-color: white;">
-        <img src="../Images/loading.gif" alt="loading" style="height:150px ;width:150px;padding-top: 65px;padding-left: 160px;">
+        <img src="../assets/Images/loading.gif" alt="loading" style="height:150px ;width:150px;padding-top: 65px;padding-left: 160px;">
     </body>
 </html>
