--- a/desktop-app/html/login.html
+++ b/desktop-app/html/login.html
@@ -1,4 +1,5 @@
-
+<title>Login</title>
+<script src="../assets/js/userHandling.js"></script>
     <!--login view-->
     <div class="container-fluid d-flex flex-row position-relative justify-content-center align-items-center overflow-y-hidden d-none">
         <div class="background-image d-flex flex-row-reverse rounded mt-5 p-2">
