--- a/desktop-app/html/dashboard.html
+++ b/desktop-app/html/dashboard.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>Dashboard</title>
+    <title>Login</title>
     <script src="../assets/js/userHandling.js"></script>
     <style>
         .bo{
@@ -72,7 +72,7 @@
                         <div class="row bo">
                             <div class="col-7 bo ">
                                 <div class="align-items-center justify-content-center bo p-5">
-                                    <div class="input-group">
+                                    <div class="input-group mb-3">
                                         <input type="text" placeholder="Select user" class="form-control">
                                         <button type="button" class="btn btn-outline-secondary" style="width: 100px;">Submit</button>
                                         <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown"  aria-expanded="false">
@@ -93,7 +93,7 @@
                                         <input type="text" aria-label="Last name" class="form-control">
                                     </div>
                                     <div class="input-group mb-4">
-                                        <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's email" aria-describedby="basic-addon2">
+                                        <input type="text" class="form-control" placeholder="Recipient's email" aria-label="Recipient's email" aria-describedby="basic-addon2">
                                         <span class="input-group-text" id="basic-addon2">@example.com</span>
                                     </div>
                                     <div class="input-group mb-4">
@@ -148,9 +148,22 @@
     
                                 </div>
                             </div>
-                            <div class="col bo text-center align-items-center justify-content-center">
-                                <h5>update upcoming</h5>
+                            <div class="col bo align-items-center justify-content-center p-4">
+                                <div class="row align-items-center justify-content-center ">
+                                    <div class="card" style="min-width: 20rem; height: 50vh; ">
+                                        <img src="..." class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                          <h5 class="card-title">Card title</h5>
+                                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        </div>
+                                      </div>
+                                </div>
+                                <div class="row align-items-end  my-3" >
+                                    <button type="button" class="btn btn-secondary fs-4 " style="height: 8vh; width: 15vw; ">Continue</button>
+                                </div>
                             </div>
+
                         </div>
                     </div>
 
@@ -161,8 +174,31 @@
 
 
 
-    <!--dashboard-->
-
+    <!--login view-->
+    <div class="container-fluid d-flex flex-row position-relative justify-content-center align-items-center overflow-y-hidden d-none">
+        <div class="background-image d-flex flex-row-reverse rounded mt-5 p-2">
+            <div class="color-overlay d-flex flex-column justify-content-center align-items-center mt-xxl-5 me-xl-5" style="max-width: 400px">
+                <div class="d-flex flex-column rounded border border-success border-opacity-25 p-3 shadow mt-xl-n2 justify-content-center align-items-center added-change" style="width:40vh">
+                    <h2 class="fw-semibold mb-n5 mt-1">Login</h2>
+                    <form class="d-flex flex-column justify-content-center align-items-center w-100" >
+                        <div class="mb-3 w-100">
+                            <label for="userNameInput" class="form-label">Username</label>
+                            <input type="text" class="form-control" id="userNameInput" aria-describedby="emailHelp" placeholder="">
+                        </div>
+                        <div class="mb-3 w-100">
+                            <label for="passwordInput" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="passwordInput" placeholder="">
+                        </div>
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">Remember me</label>
+                        </div>
+                        <button id="btn-login" type="submit" class="btn btn-primary btn-block w-100">Log in</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
