--- a/desktop-app/html/login.html
+++ b/desktop-app/html/login.html
@@ -1,27 +1,87 @@
-<title>Login</title>
-<script src="../assets/js/userHandling.js"></script>
-    <!--login view-->
-    <div class="container-fluid d-flex flex-row position-relative justify-content-center align-items-center overflow-y-hidden d-none">
-        <div class="background-image d-flex flex-row-reverse rounded mt-5 p-2">
-            <div class="color-overlay d-flex flex-column justify-content-center align-items-center mt-xxl-5 me-xl-5" style="max-width: 400px">
-                <div class="d-flex flex-column rounded border border-success border-opacity-25 p-3 shadow mt-xl-n2 justify-content-center align-items-center added-change" style="width:40vh">
-                    <h2 class="fw-semibold mb-n5 mt-1">Login</h2>
-                    <form class="d-flex flex-column justify-content-center align-items-center w-100" >
-                        <div class="mb-3 w-100">
-                            <label for="userNameInput" class="form-label">Username</label>
-                            <input type="text" class="form-control" id="userNameInput" aria-describedby="emailHelp" placeholder="">
-                        </div>
-                        <div class="mb-3 w-100">
-                            <label for="passwordInput" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="passwordInput" placeholder="">
-                        </div>
-                        <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">Remember me</label>
-                        </div>
-                        <button id="btn-login" type="submit" class="btn btn-primary btn-block w-100">Log in</button>
-                    </form>
-                </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+</head>
+<style>
+    .bo{
+        border:2px solid black;
+    }
+    .c-btn{
+        
+    }
+    .background-image {
+        background-image: url('../assets/login-cover.png');
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 100vh;
+    }
+    @media (min-width: 576px) {
+        .background-image {
+            background-position: right;
+            width: 100vw;
+            height: 100vh;
+        }
+    }
+    @media (min-width: 1410px) {
+        .added-change{
+            height: 450px;
+        }
+    }
+
+    .full button span {
+        background-color: limegreen;
+        border-radius: 32px;
+        color: black;
+    }
+    .partially button span {
+        background-color: orange;
+        border-radius: 32px;
+        color: black;
+    }
+
+    .c-box{
+        max-width: 65%;
+    }
+
+</style>
+<body class="overflow-y-hidden">
+    
+
+
+<!--login view-->
+<div class="container-fluid d-flex flex-row position-relative justify-content-center align-items-center overflow-y-hidden ">
+    <div class="background-image d-flex flex-row-reverse rounded mt-5 p-2">
+        <div class="color-overlay d-flex flex-column justify-content-center align-items-center mt-xxl-5 me-xl-5" style="max-width: 400px">
+            <div class="d-flex flex-column rounded border border-success border-opacity-25 p-3 shadow mt-xl-n2 justify-content-center align-items-center added-change" style="width:40vh">
+                <h2 class="fw-semibold mb-n5 mt-1">Login</h2>
+                <form class="d-flex flex-column justify-content-center align-items-center w-100" >
+                    <div class="mb-3 w-100">
+                        <label for="userNameInput" class="form-label">Username</label>
+                        <input type="text" class="form-control" id="userNameInput" aria-describedby="emailHelp" placeholder="">
+                    </div>
+                    <div class="mb-3 w-100">
+                        <label for="passwordInput" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="passwordInput" placeholder="">
+                    </div>
+                    <div class="mb-3 form-check">
+                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <label class="form-check-label" for="exampleCheck1">Remember me</label>
+                    </div>
+                    <button id="btn-login" type="submit" class="btn btn-primary btn-block w-100">Log in</button>
+                </form>
             </div>
         </div>
     </div>
+</div>
+
+<script src="../assets/js/userHandling.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
+
+</body>
+</html>
+
