without wireframe +basic look

--- a/desktop-app/html/dashboard.html
+++ b/desktop-app/html/dashboard.html
@@ -11,7 +11,7 @@
     <script src="../assets/js/userHandling.js"></script>
     <style>
         .bo{
-            border:2px solid black;
+            border:1px solid black;
         }
         .c-btn{
             
@@ -66,12 +66,12 @@
                   </div>
             </div>
 
-            <div class="col justify-content-evenly align-items-evenly p-3 bo">
+            <div class="col justify-content-evenly align-items-evenly p-3 ">
 
-                    <div class="justify-content-evenly align-items-evenly p-5 position-relative bo" >
-                        <div class="row bo">
-                            <div class="col-7 bo ">
-                                <div class="align-items-center justify-content-center bo p-5">
+                    <div class="justify-content-evenly align-items-evenly p-5 position-relative " >
+                        <div class="row justify-content-center align-items-center">
+                            <div class="col-7">
+                                <div class="align-items-center justify-content-center p-5">
                                     <div class="input-group mb-3">
                                         <input type="text" placeholder="Select user" class="form-control">
                                         <button type="button" class="btn btn-outline-secondary" style="width: 100px;">Submit</button>
@@ -148,19 +148,20 @@
     
                                 </div>
                             </div>
-                            <div class="col bo align-items-center justify-content-center p-4">
+
+                            <div class="col align-items-center justify-content-center p-4">
                                 <div class="row align-items-center justify-content-center ">
-                                    <div class="card" style="min-width: 20rem; height: 50vh; ">
+                                    <div class="card" style="min-width: 20rem; min-height: 70vh; ">
                                         <img src="..." class="card-img-top" alt="...">
                                         <div class="card-body">
-                                          <h5 class="card-title">Card title</h5>
-                                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                          <h5 class="card-title">upcomig update</h5>
+                                          <p class="card-text">upcoming update info</p>
                                           <a href="#" class="btn btn-primary">Go somewhere</a>
                                         </div>
                                       </div>
                                 </div>
-                                <div class="row align-items-end  my-3" >
-                                    <button type="button" class="btn btn-secondary fs-4 " style="height: 8vh; width: 15vw; ">Continue</button>
+                                <div class="row align-items-center justify-content-center  my-3" >
+                                    <button type="button" class="btn btn-secondary fs-4  shadow" style="height: 8vh; width: 15vw; ">Continue</button>
                                 </div>
                             </div>
 
