--- a/desktop-app/html/dashboard.html
+++ b/desktop-app/html/dashboard.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Dashboard</title>
-    <script src="../assets/js/userHandling.js"></script>
+    <script src="../assets/js/dashboard.js"></script>
     <style>
         .bo{
             border:2px solid black;
@@ -73,18 +73,15 @@
                             <div class="col-7 bo ">
                                 <div class="align-items-center justify-content-center bo p-5">
                                     <div class="input-group">
-                                        <input type="text" placeholder="Select user" class="form-control">
-                                        <button type="button" class="btn btn-outline-secondary" style="width: 100px;">Submit</button>
-                                        <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown"  aria-expanded="false">
-                                        <span class="visually-hidden">Toggle Dropdown</span>
-                                        </button>
-                                        <ul class="dropdown-menu dropdown-menu-end">
-                                            <li><a class="dropdown-item" href="#">Reguler Client</a></li>
-                                            <li><hr class="dropdown-divider"></li>
-                                            <li><a class="dropdown-item" href="#">Company 1</a></li>
-                                            <li><a class="dropdown-item" href="#">Company 2</a></li>
-                                            <li><a class="dropdown-item" href="#">Company 3</a></li>
-                                        </ul>
+                                        <input type="text" placeholder="Client Name" class="form-control">
+
+                                        <select class="form-select" aria-label="Select Company" id="companyDrop">
+                                            <option value="-1">Select Client</option>
+                                            <option>one</option>
+                                            <option>Two</option>
+                                            <option>Three</option>
+                                        </select>
+                                        <button type="button" class="btn btn-outline-secondary" style="width: 100px;" id="dataSubmit">Submit</button>
                                     </div>
 
                                     <div class="input-group mb-4">
