--- a/desktop-app/html/dashboard.html
+++ b/desktop-app/html/dashboard.html
@@ -73,8 +73,6 @@
                         <div class="row bo">
                             <div class="col-7 bo ">
                                 <div class="align-items-center justify-content-center bo p-5">
-                                    <div class="input-group">
-                                        <input type="text" placeholder="Client Name" class="form-control">
 
                                         <select class="form-select" aria-label="Select Company" id="companyDrop">
                                             <option value="-1">Select Client</option>
@@ -86,20 +84,20 @@
 
                                     <div class="input-group mb-4">
                                         <span class="input-group-text">First and last name</span>
-                                        <input type="text" aria-label="First name" class="form-control">
-                                        <input type="text" aria-label="Last name" class="form-control">
+                                        <input type="text" aria-label="First name" class="form-control" id="fname">
+                                        <input type="text" aria-label="Last name" class="form-control" id="lname">
                                     </div>
                                     <div class="input-group mb-4">
-                                        <input type="text" class="form-control" placeholder="Recipient's email" aria-label="Recipient's email" aria-describedby="basic-addon2">
-                                        <span class="input-group-text" id="basic-addon2">@example.com</span>
+                                        <input type="text" class="form-control" placeholder="Recipient's email" aria-label="Recipient's email" aria-describedby="basic-addon2" id="email">
+                                        
                                     </div>
                                     <div class="input-group mb-4">
                                         <span class="input-group-text" id="basic-addon1">></span>
-                                        <input type="text" class="form-control" placeholder="Mobile number" aria-label="Username" aria-describedby="basic-addon1">
+                                        <input type="text" class="form-control" placeholder="Mobile number" aria-label="Username" aria-describedby="basic-addon1" id="mobiNum">
                                     </div>
                                     <div class="input-group my-4">
                                         <span class="input-group-text">Address</span>
-                                        <textarea class="form-control py-4" aria-label="With textarea"></textarea>
+                                        <textarea class="form-control py-4" aria-label="With textarea" id="address"></textarea>
                                       </div>
 
                                     <!--
@@ -114,15 +112,9 @@
                                     </div>--> 
     
                                     <div class="d-flex flex-row mt-3">
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                            <label class="form-check-label" for="flexCheckDefault">
-                                              Additional info
-                                            </label>
-                                          </div>
                                           <div class="form-check mx-4">
-                                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                            <label class="form-check-label" for="flexCheckDefault">
+                                            <input class="form-check-input" type="checkbox" value="1" id="urgency" >
+                                            <label class="form-check-label" for="flexCheckDefault"  >
                                               Urgent
                                             </label>
                                           </div>
@@ -132,13 +124,13 @@
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label for="input_from">From</label>
-                                              <input type="text" class="form-control" id="input_from" placeholder="Start Date">
+                                              <input type="date" class="form-control" placeholder="Start Date" id="from">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label for="input_to">To</label>
-                                              <input type="text" class="form-control" id="input_to" placeholder="End Date">
+                                              <input type="date" class="form-control"  placeholder="End Date" id="to">
                                             </div>
                                         </div>
                                       </form>
@@ -158,7 +150,7 @@
                                       </div>
                                 </div>
                                 <div class="row align-items-center justify-content-center  my-3" >
-                                    <button type="button" class="btn btn-secondary fs-4  shadow" style="height: 8vh; width: 15vw; ">Continue</button>
+                                    <button type="button" class="btn btn-secondary fs-4  shadow" style="height: 8vh; width: 15vw; " id="continue">Continue</button>
                                 </div>
                             </div>
 
