done upto invoices

--- a/desktop-app/html/dashboard.html
+++ b/desktop-app/html/dashboard.html
@@ -123,6 +123,11 @@
                                     <option>short</option>
                                 </select>
                             </div>
+                            <div class="row text-center  ps-4 pe-4">
+                                <div class="input-group mb-3">
+                                    <span class="input-group-text" id="basic-addon3">Quantity</span>
+                                    <input type="number" class="form-control" aria-describedby="basic-addon3" id="quantity">
+                                </div>
                             <div class="input-group mb-3">
                                 <span class="input-group-text" id="basic-addon2">Urgency</span>
                                 <select class="form-select" aria-label="Select Company" id="priorityId">
@@ -174,6 +179,7 @@
                             <thead class="table-light">
                                 <tr>
                                     <th scope="col">item</th>
+                                    <th scope="col">Quantity</th>
                                     <th scope="col">priority</th>
                                     <th scope="col">Action</th> 
                                   </tr>
