--- a/desktop-app/html/dashboard.html
+++ b/desktop-app/html/dashboard.html
@@ -134,24 +134,14 @@
                                         <th scope="col">Action</th> 
                                     </tr>
                                 </thead>
-                                <tbody>
+                                <tbody id="itemBody" style="color: white;">
 
                                 </tbody>
                             </table>
 
                         </div>
-                        <button class="btn btn-dark">+</button>
+                        <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#addNewItem">+</button>
                     </div>
-
-
- 
-                    
-                    
-
-
-
-
-
 
                     <div class="col-5 justify-content-center align-self-center data-set-c" >
                         <div class="data-set">
