Refer this order

--- a/desktop-app/html/dashboard.html
+++ b/desktop-app/html/dashboard.html
@@ -113,8 +113,13 @@
 
 -->
 <body class="overflow-y-hidden bgs"> 
+
+
+<!--section 1-->
+<!------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
 <div class="container-fluid justify-content-center align-items-center d-none" style="height:100vh;" >
         <div class="row align-items-center" style="height:100vh;">
+        <!-------------------[Reguler menu]---------------------->
             <div class="col-3 p-5 justify-content-center align-items-center " style="max-width: fit-content; height: max-content; position: relative; top: 2vh; ">
                 <div class="btn-group-vertical justify-content-center align-items-center position-relative mt-xxl-4" role="group" aria-label="Vertical button group" >
                     <button type="button" class="btn btn-outline-light p-4 my-2 rounded mb-3 shadow" ><img src="../assets/Images/home.png" alt="" srcset="" width="40px" ></button>
@@ -123,7 +128,8 @@
                     <button type="button" class="btn btn-outline-light p-4 my-2 rounded shadow"><img src="../assets/Images/user.png" alt="" srcset="" width="40px" ></button>
                   </div>
             </div>
-
+        <!-------------------[Reguler menu]---------------------->
+        <!-------------------[PLACING ORDER UI .1]---------------------->
             <div class="col position-relative justify-content-around" >
                 <div class="row" justify-content-around style="height:95vh ">
 
@@ -182,12 +188,20 @@
 
                 </div>
             </div>
+        <!-------------------[PLACING ORDER UI .1]---------------------->
         </div>
 </div>
+<!------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
+
+
+<!--   "d-none"  <<< pls use this class to hide the view   -->
+
+<!--section 2-->
+<!------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
 <div class="container-fluid justify-content-center align-items-center" style="height:100vh;" >
 
     <div class="row align-items-center " style="height:100vh;">
-
+        <!-------------------[Reguler menu]----------------------------->
         <div class="col-3 p-5 justify-content-center align-items-center " style="max-width: fit-content; height: max-content; position: relative; top: 2vh; ">
             <div class="btn-group-vertical justify-content-center align-items-center position-relative mt-xxl-4" role="group" aria-label="Vertical button group" >
                 <button type="button" class="btn btn-outline-light p-4 my-2 rounded mb-3 shadow" ><img src="../assets/Images/home.png" alt="" srcset="" width="40px" ></button>
@@ -196,6 +210,8 @@
                 <button type="button" class="btn btn-outline-light p-4 my-2 rounded shadow"><img src="../assets/Images/user.png" alt="" srcset="" width="40px" ></button>
               </div>
         </div>
+        <!-------------------[Reguler menu]----------------------------->
+
         <!-------------------[PLACING ORDER UI .2]---------------------->
         <div class="col">
             <div class="row justify-content-center align-items-center" style="height:100vh;" >
@@ -279,13 +295,11 @@
     
             </div>
         </div>
-
         <!-------------------[PLACING ORDER UI .2]---------------------->
     </div>
 </div>
+<!------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
 
-<!------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
-<!------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
 
 
 
