--- a/desktop-app/html/dashboard.html
+++ b/desktop-app/html/dashboard.html
@@ -202,7 +202,7 @@
 
     <div class="row align-items-center " style="height:100vh;">
         <!-------------------[Reguler menu]----------------------------->
-        <div class="col-3 p-5 justify-content-center align-items-center " style="max-width: fit-content; height: max-content; position: relative; top: 2vh; ">
+        <div class="col-3  p-5 justify-content-center align-items-center " style="max-width: fit-content; height: max-content; position: relative; top: 2vh; ">
             <div class="btn-group-vertical justify-content-center align-items-center position-relative mt-xxl-4" role="group" aria-label="Vertical button group" >
                 <button type="button" class="btn btn-outline-light p-4 my-2 rounded mb-3 shadow" ><img src="../assets/Images/home.png" alt="" srcset="" width="40px" ></button>
                 <button type="button" class="btn btn-outline-light p-4 my-2 rounded mb-3 shadow"><img src="../assets/Images/search.png" alt="" srcset="" width="40px" ></button>
@@ -215,7 +215,7 @@
         <!-------------------[PLACING ORDER UI .2]---------------------->
         <div class="col">
             <div class="row justify-content-center align-items-center" style="height:100vh;" >
-                <div class="col-7 p-4 rounded bg-dark shadow justify-content-center align-items-center" style="margin-top: 5vh; height: fit-content;">
+                <div class="col-7 p-4 rounded bg-dark shadow justify-content-center align-items-center shadow-lg" style="margin-top: 5vh; height: fit-content;">
                     <div class="row d-flex flex-row-betwwen " style="border-bottom: 2px solid rgba(255, 255, 255, 0.312);">
                         <div class="col px-5">
                             <h3 style="">CHECKOUT</h3>
