--- a/desktop-app/html/dashboard.html
+++ b/desktop-app/html/dashboard.html
@@ -357,8 +357,8 @@
                         </div>
 
                         <div class="col" >
-                            <div class="card" style="min-height: 40vh;background-color: rgba(0, 0, 0, 0.209);">
-                                <img src="..." class="card-img-top" alt="...">
+                            <div class="card p-5" style="min-height: 40vh;background-color: rgba(0, 0, 0, 0.209);">
+                                <!--<img src="..." class="card-img-top" alt="...">-->
                                 <div class="card-body">
                                   <h5 class="card-title">Upcoming Update</h5>
                                   <p class="card-text">upcoming update !</p>
@@ -366,10 +366,10 @@
                               </div>
                         </div>
 
-                        <div class="col">
-                          <div class="card " style="min-height: 40vh;background-color: rgba(0, 0, 0, 0.209);">
-                            <img src="..." class="card-img-top" alt="...">
-                            <div class="card-body">
+                        <div class="col  ">
+                          <div class="card p-5" style="min-height: 40vh;background-color: rgba(0, 0, 0, 0.209);">
+                            <!--<img src="..." class="card-img-top" alt="...">-->
+                            <div class="card-body ">
                               <h5 class="card-title">Upcoming Update</h5>
                               <p class="card-text">upcoming Update</p>
                             </div>
