--- a/desktop-app/html/dashboard.html
+++ b/desktop-app/html/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../css/style.css">
+   <!--<link rel="stylesheet" href="../css/style.css">--> 
     <link rel="stylesheet" href="../assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Dashboard</title>
@@ -117,7 +117,7 @@
 
 <!--section 1-->
 <!------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
-<div class="container-fluid justify-content-center align-items-center d-none" style="height:100vh;" id="orderPlaceDiv">
+<div class="container-fluid justify-content-center align-items-center " style="height:100vh;display: block;" id="orderPlaceDiv">
         <div class="row align-items-center" style="height:100vh;">
         <!-------------------[Reguler menu]---------------------->
             <div class="col-3 p-5 justify-content-center align-items-center " style="max-width: fit-content; height: max-content; position: relative; top: 2vh; ">
@@ -156,8 +156,8 @@
                     <div class="col-5 justify-content-center align-self-center data-set-c" >
                         <div class="data-set">
                             <div class="widget text-end p-2" >
-                                <h1>09:00AM | </h1>
-                                <label for="exampleDataList" class="form-label">Good morning! - Sunday 2023-04-04</label>
+                                <h1 id="timeNow"></h1>
+                                <label for="exampleDataList" class="form-label" id="dateNow"></label>
                             </div>
                             <input class="form-control form-control-md my-3" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
                             <datalist id="datalistOptions">
@@ -194,11 +194,9 @@
 <!------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
 
 
-<!--   "d-none"  <<< pls use this class to hide the view   -->
-
 <!--section 2-->
 <!------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
-<div class="container-fluid justify-content-center align-items-center d-none" style="height:100vh;display:block;" id="summaryDiv">
+<div class="container-fluid justify-content-center align-items-center" style="height:100vh;display:none;" id="summaryDiv">
 
     <div class="row align-items-center " style="height:100vh;">
         <!-------------------[Reguler menu]----------------------------->
@@ -218,7 +216,7 @@
                 <div class="col-7 p-4 rounded bg-dark shadow justify-content-center align-items-center shadow-lg" style="margin-top: 5vh; height: fit-content;">
                     <div class="row d-flex flex-row-betwwen " style="border-bottom: 2px solid rgba(255, 255, 255, 0.312);">
                         <div class="col px-5">
-                            <h3 style="">CHECKOUT</h3>
+                            <h3>CHECKOUT</h3>
                         </div>
                         <div class="col d-flex flex-row-reverse align-items-center mb-3">
                             <button type="button" class="btn btn-transparent p-1 mx-1" style="height:fit-content"><img src="../assets/Images/checklist.png" alt="" width="30vw"></button>  
@@ -235,18 +233,18 @@
                         <label for="floatingPlaintextInput" class="p-3 ">Bill count</label>
                     </div>
                     <div class="form-floating mb-2 mx-5">
-                        <input type="email" readonly class="form-control-plaintext" id="floatingPlaintextInput" placeholder="#" value="sumanapala gurunnanse" style="color: whitesmoke; position: relative; left: 2vw;">
+                        <input type="email" readonly class="form-control-plaintext"  placeholder="#" value="" style="color: whitesmoke; position: relative; left: 2vw;" id="cusName">
                         <label for="floatingPlaintextInput">Buyer's name</label>
                     </div>
                     <div class="form-floating mb-2 mx-5">
-                        <input type="email" readonly class="form-control-plaintext" id="floatingPlaintextInput" placeholder="#" value="aff@gmail.com / 071 22345656" style="color: whitesmoke; position: relative; left: 2vw;">
+                        <input type="email" readonly class="form-control-plaintext"  placeholder="#" value="" style="color: whitesmoke; position: relative; left: 2vw;" id="contactInfo">
                         <label for="floatingPlaintextInput">Contact info</label>
                     </div>
 
                     <div class="row mx-5">
                         <div class="col-6">
                             <div class="form-floating ">
-                                <input type="email" readonly class="form-control-plaintext" id="floatingPlaintextInput" placeholder="#" value="2003-04-23" style="color: whitesmoke; position: relative; left: 2vw;">
+                                <input type="email" readonly class="form-control-plaintext" id="Orderdate" placeholder="#" value="2003-04-23" style="color: whitesmoke; position: relative; left: 2vw;">
                                 <label for="floatingPlaintextInput">Order placecd date:</label>
                             </div>
                         </div>
@@ -278,7 +276,7 @@
                     </div>
                     <div class="row justify-content-center">
                         <div class="d-flex align-items-center justify-content-center my-3 rounded p-3" style="width: fit-content; background-color: rgba(0, 0, 0, 0.434);">
-                            <button type="button" class="btn btn-transparent p-1 mx-1" style="height:fit-content"><img src="../assets/Images/back.png" alt="" width="30vw"></button>  
+                            <button type="button" class="btn btn-transparent p-1 mx-1" style="height:fit-content"><img src="../assets/Images/back.png" alt="" width="30vw" id="goBack"></button>  
                             <button type="button" class="btn btn-transparent p-1 mx-1" style="height:fit-content"><img src="../assets/Images/edit.png" alt="" width="30vw" ></button>
                             <button type="button" class="btn btn-transparent p-1 mx-1" style="height:fit-content"><img src="../assets/Images/flag.png" alt="" width="30vw" ></button>
                         </div>
@@ -302,7 +300,7 @@
 
 
 <!------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
-<div class="container-fluid justify-content-center align-items-center " style="height:100vh;display:block;" id="summaryDiv">
+<div class="container-fluid justify-content-center align-items-center " style="height:100vh;display: none;" >
 
     <div class="row align-items-center " style="height:100vh;">
         <!-------------------[Reguler menu]----------------------------->
@@ -317,10 +315,10 @@
         <!-------------------[Reguler menu]----------------------------->
 
         <!-------------------[home-screen]---------------------->
-        <div class="col justify-content-center align-items-center text-center m-4 mt-5 rounded" style="height:100vh;background: linear-gradient(rgba(255, 255, 255, 0.798), #ffffff37); ">
+        <div class="col justify-content-center align-items-center text-center m-4 mt-5 rounded" style="height:100vh;background: linear-gradient(rgba(255, 255, 255, 0.798), #ffffff37);display: none;">
             <div class="row mb-0">
                 <div class=" mt-0">
-                    <div class="row row-cols-1 row-cols-md-2 g-3 " style="">
+                    <div class="row row-cols-1 row-cols-md-2 g-3 " >
 
                         <div class="col align-items-center justify-content-center p-0 SHADOW">
                             <div class="card bg-transparent bo mt-3 align-items-center justify-content-center p-0" style="min-height: 40vh; border: none; ">
