--- a/desktop-app/html/dashboard.html
+++ b/desktop-app/html/dashboard.html
@@ -439,6 +439,7 @@
                                     <option>Pressing & Dry Cleaning</option>
                                     <option>Pressing & Washing</option>
                                     <option>Washing & Dry Cleaning</option>
+                                    <option>Washing, Pressing & Dry Cleaning</option>
                                 </select>
                             </div>
                             <div class="input-group mb-3">
