--- a/desktop-app/html/dashboard.html
+++ b/desktop-app/html/dashboard.html
@@ -252,7 +252,7 @@
                         </div>
                         <div class="col-6">
                             <div class="form-floating ">
-                                <input type="email" readonly class="form-control-plaintext " id="floatingPlaintextInput" placeholder="#" value="2003-04-25" style="color: whitesmoke; position: relative; left: 2vw;">
+                                <input type="email" readonly class="form-control-plaintext " id="delDate" placeholder="#" value="" style="color: whitesmoke; position: relative; left: 2vw;">
                                 <label for="floatingPlaintextInput" >Order fulfill date:</label>
                             </div>
                         </div>
