--- a/desktop-app/html/dashboard.html
+++ b/desktop-app/html/dashboard.html
@@ -129,7 +129,7 @@
         <!-------------------[Reguler menu]----------------------------->
 
         <!-------------------[home-view]---------------------->
-        <div id="section-home-view" class="col justify-content-center align-items-center text-center m-4 mt-5 rounded " style="height:100vh;background: linear-gradient(rgba(255, 255, 255, 0.798), #ffffff37);">
+        <div id="section-home-view" class="col justify-content-center align-items-center text-center m-4 mt-5 rounded " style="background: linear-gradient(rgba(255, 255, 255, 0.798), #ffffff37);">
             <div class="row mb-0">
                 <div class=" mt-0">
                     <div class="row row-cols-1 row-cols-md-2 g-3 " >
@@ -345,7 +345,7 @@
         <!-------------------[place order view 2]---------------------->
 
         <!-------------------[maintain-view]---------------------->
-        <div id="section-maintain-view" class="col justify-content-center align-items-center text-center m-4 mt-5 rounded d-none" style="height:100vh;">
+        <div id="section-maintain-view" class="col justify-content-center align-items-center text-center rounded d-none">
                     <div class="row p-2" style="height:100vh;">
                         <div class="col-9">
                             <div class="container tab-content" id="nav-tabContent">
